--- a/bibliography/sensor_tab.html
+++ b/bibliography/sensor_tab.html
@@ -262,10 +262,10 @@
 												<td class="column1">Multilayer graphene (CVD)</td>
 												<td class="column2">Chemiresistor</td>
 												<td class="column3">NO<SUB>2</SUB></td>
-												<td class="column4">1 ppm</td>
-												<td class="column5">-</td>
-												<td class="column6">-</td>
-												<td class="column7">-</td>
+												<td class="column4">0.2 ppm</td>
+												<td class="column5">5% at 1 ppm</td>
+												<td class="column6">not tested</td>
+												<td class="column7">no recovery (RT)</td>
 												<td class="column8"><a href="../sources/1.pdf">1</a></td>
 											</tr>
 											<tr>
@@ -273,9 +273,9 @@
 												<td class="column2">Chemiresistor</td>
 												<td class="column3">NO<SUB>2</SUB></td>
 												<td class="column4">100 ppb</td>
-												<td class="column5">-</td>
-												<td class="column6">-</td>
-												<td class="column7">-</td>
+												<td class="column5">5% at 1.5 ppm</td>
+												<td class="column6">not tested</td>
+												<td class="column7">no recovery (RT)</td>
 												<td class="column8"><a href="../sources/2.pdf">2</a></td>
 											</tr>
 											<tr>
@@ -283,9 +283,9 @@
 												<td class="column2">Chemiresistor</td>
 												<td class="column3">NO<SUB>2</SUB></td>
 												<td class="column4">100 ppb</td>
-												<td class="column5">-</td>
-												<td class="column6">-</td>
-												<td class="column7">-</td>
+												<td class="column5">4% at 100 ppb</td>
+												<td class="column6">NH<SUB>3</SUB>, CO<SUB>2</SUB></td>
+												<td class="column7">no recovery (RT)</td>
 												<td class="column8"><a href="../sources/3.pdf">3</a></td>
 											</tr>
 											<tr>
@@ -293,9 +293,9 @@
 												<td class="column2">Chemiresistor</td>
 												<td class="column3">NH<SUB>3</SUB></td>
 												<td class="column4">500 ppb</td>
-												<td class="column5">-</td>
-												<td class="column6">-</td>
-												<td class="column7">-</td>
+												<td class="column5">3% at 500 ppb</td>
+												<td class="column6">NO<SUB>2</SUB>, CO<SUB>2</SUB></td>
+												<td class="column7">no recovery (RT)</td>
 												<td class="column8"><a href="../sources/3.pdf">3</a></td>
 											</tr>
 											<tr>
@@ -303,9 +303,9 @@
 												<td class="column2">Chemiresistor</td>
 												<td class="column3">NO<SUB>2</SUB></td>
 												<td class="column4">1 ppb</td>
-												<td class="column5">-</td>
-												<td class="column6">-</td>
-												<td class="column7">-</td>
+												<td class="column5">25% at 400 ppb</td>
+												<td class="column6">not tested</td>
+												<td class="column7">1 min</td>
 												<td class="column8"><a href="../sources/4.pdf">4</a></td>
 											</tr>
 											<tr>
@@ -313,9 +313,9 @@
 												<td class="column2">Chemiresistor</td>
 												<td class="column3">NO<SUB>2</SUB></td>
 												<td class="column4">40 ppt</td>
-												<td class="column5">-</td>
-												<td class="column6">-</td>
-												<td class="column7">-</td>
+												<td class="column5">3% at 200 ppt</td>
+												<td class="column6">not tested</td>
+												<td class="column7">5 min</td>
 												<td class="column8"><a href="../sources/5.pdf">5</a></td>
 											</tr>
 											<tr>
@@ -323,9 +323,9 @@
 												<td class="column2">Chemiresistor</td>
 												<td class="column3">NO<SUB>2</SUB></td>
 												<td class="column4">5 ppm</td>
-												<td class="column5">-</td>
-												<td class="column6">-</td>
-												<td class="column7">-</td>
+												<td class="column5">5% at 5 ppm</td>
+												<td class="column6">not tested</td>
+												<td class="column7">2 sec</td>
 												<td class="column8"><a href="../sources/6.pdf">6</a></td>
 											</tr>
 										</tbody>
