--- a/sample/T2.html
+++ b/sample/T2.html
@@ -268,11 +268,11 @@
 						</tr>
 						<tr class="presentation">
 							<td onclick="goToPage('S1.html')">sample1</td>
-							<<td onclick="goToPage('S2.html')">sample2</td>
-							<td>E4</td>
-							<td>E3</td>
-							<td>E2</td>
-							<td>E1</td>
+							<td onclick="goToPage('S2.html')">sample2</td>
+							<td onclick="goToPage('E4.html')">E4</td>
+							<td onclick="goToPage('E3.html')">E3</td>
+							<td onclick="goToPage('E2.html')">E2</td>
+							<td onclick="goToPage('E1.html')">E1</td>
 						</tr>
 					</table>
 					<legend style="text-align: center;">
