--- a/experiments.html
+++ b/experiments.html
@@ -206,6 +206,10 @@
 							<li><strong><a href="sample/T4.html">Test 4</a></strong></li>
 							<li><strong><a href="sample/S1.html">Sample 1</a></strong></li>
 							<li><strong><a href="sample/S2.html">Sample 2</a></strong></li>
+							<li><strong><a href="sample/E1.html">E1</a></strong></li>
+							<li><strong><a href="sample/E2.html">E2</a></strong></li>
+							<li><strong><a href="sample/E3.html">E3</a></strong></li>
+							<li><strong><a href="sample/E4.html">E4</a></strong></li>
 						</ul>
 					</li>
 					<li><a href="bibliography/sensor_tab.html" style="color:#000000"><strong>Bibliography search</strong></a></li>
@@ -233,10 +237,10 @@
 						<tr class="presentation">
 							<td onclick="goToPage('sample/S1.html')">sample1</td>
 							<td onclick="goToPage('sample/S2.html')">sample2</td>
-							<td>E4</td>
-							<td>E3</td>
-							<td>E2</td>
-							<td>E1</td>
+							<td onclick="goToPage('sample/E4.html')">E4</td>
+							<td onclick="goToPage('sample/E3.html')">E3</td>
+							<td onclick="goToPage('sample/E2.html')">E2</td>
+							<td onclick="goToPage('sample/E1.html')">E1</td>
 						</tr>
 					</table>
 					<legend style="text-align: center;">
