--- a/bibliography/sensor_tab.html
+++ b/bibliography/sensor_tab.html
@@ -328,6 +328,16 @@
 												<td class="column7">2 sec</td>
 												<td class="column8"><a href="../sources/6.pdf">6</a></td>
 											</tr>
+											<tr>
+												<td class="column1">bi-layer MoS<SUB>2</SUB> (CVD)</td>
+												<td class="column2">Chemiresistor</td>
+												<td class="column3">NO<SUB>2</SUB></td>
+												<td class="column4">1 ppm</td>
+												<td class="column5">2.6% at 1 ppm</td>
+												<td class="column6">O<SUB>2</SUB>, H<SUB>2</SUB>, CH<SUB>4</SUB>, and NH<SUB>3</SUB></td>
+												<td class="column7">5.3 min</td>
+												<td class="column8"><a href="../sources/7.pdf">7</a></td>
+											</tr>
 										</tbody>
 									</table>
 								</div>
@@ -349,6 +359,8 @@
 							<li>(5) <a href="../sources/5.pdf">Chen et al, Sub-ppt gas detection with pristine graphene. Appl. Phys. Lett. 2012, 101, 053119</a>.</li>
 							<li>(6) <a href="../sources/6.pdf">Wenli et al, Gas Sensors Based on Mechanically Exfoliated MoS<SUB>2</SUB> Nanosheets for Room-Temperature NO<SUB>2</SUB> Detection.
 							Sensors (Basel, Switzerland) vol. 19,9 2123. 2019, doi:10.3390/s19092123</a>.</li>
+							<li>(7) <a href="../sources/7.pdf">Xu et al, High-response NO<SUB>2</SUB> resistive gas sensor based on bilayer MoS<SUB>2</SUB> grown by a new two-step chemical vapor 
+							deposition method. J. Alloy. Compd. 2017, 725, 253–259.</a>.</li>
 						</ul>
 					</div>
 				</div>
