--- a/sample/S2.html
+++ b/sample/S2.html
@@ -351,7 +351,7 @@
 					<p>
 						 This chip will contain some of the final gas sensors. The fabrication contains 3 main steps : 
 						 <ul>
-							<li>Pattern different shapes with the NanoFrazor and transfer these patterns into the SiO2 layer as best as possible.</li>
+							<li>Pattern different shapes with the NanoFrazor and transfer these patterns into the SiO<SUB>2</SUB> layer as best as possible.</li>
 							<li>2D material transfer onto the best patterns.</li>
 							<li>Electrodes deposition.</li>
 						 </ul>
@@ -374,12 +374,12 @@
 								<tbody>
 									<tr>
 										<td class="column1" style="color:#fff; font-size:18px; font-family:Lato-Bold; line-height:1.4">Material</td>
-										<td class="column2">Si + SiO2</td>
+										<td class="column2">Si + SiO<SUB>2</SUB></td>
 										<td class="column3">PPA</td>
 									</tr>
 									<tr>
 										<td class="column1" style="color:#fff; font-size:18px; font-family:Lato-Bold; line-height:1.4">Thickness</td>
-										<td class="column2">SiO2 : 200 nm</td>
+										<td class="column2">SiO<SUB>2</SUB> : 200 nm</td>
 										<td class="column3">100 nm</td>
 									</tr>
 								</tbody>
@@ -388,7 +388,7 @@
 					</div>
 					<h3 id="prepa" class="subsection" onclick="return toggleMe('prepa_display')"> Substrate preparation</h3>
 					<ul id="prepa_display">
-						<li>Diced part of a wafer of Si + 200 nm SiO2</li>
+						<li>Diced part of a wafer of Si + 200 nm SiO<SUB>2</SUB></li>
 						<li>Cleaned in acetone during 5 minutes</li>
 						<li>Cleaned in isopropanole during 5 minutes</li>
 						<li>Dried with a N2 gun</li>
