--- a/sample/T1.html
+++ b/sample/T1.html
@@ -302,13 +302,13 @@
 								<tbody>
 									<tr>
 										<td class="column1" style="color:#fff; font-size:18px; font-family:Lato-Bold; line-height:1.4">Material</td>
-										<td class="column2">Si + SiO2</td>
+										<td class="column2">Si + SiO<SUB>2</SUB></td>
 										<td class="column3">PMGI</td>
 										<td class="column4">PPA</td>
 									</tr>
 									<tr>
 										<td class="column1" style="color:#fff; font-size:18px; font-family:Lato-Bold; line-height:1.4">Thickness</td>
-										<td class="column2">SiO2 : 200 nm</td>
+										<td class="column2">SiO<SUB>2</SUB> : 200 nm</td>
 										<td class="column3">180 nm</td>
 										<td class="column4">32 nm</td>
 									</tr>
@@ -318,7 +318,7 @@
 					</div>
 					<h3 id="prepa" class="subsection" onclick="return toggleMe('prepa_display')"> Substrate preparation</h3>
 					<ul id="prepa_display">
-						<li>Diced part of a wafer of Si + 200 nm SiO2</li>
+						<li>Diced part of a wafer of Si + 200 nm SiO<SUB>2</SUB></li>
 						<li>Cleaned in acetone during 5 minutes</li>
 						<li>Cleaned in isopropanole during 5 minutes</li>
 						<li>Dried with a N2 gun</li>
