--- a/bibliography/sensor_tab.html
+++ b/bibliography/sensor_tab.html
@@ -338,6 +338,16 @@
 												<td class="column7">5.3 min</td>
 												<td class="column8"><a href="../sources/7.pdf">7</a></td>
 											</tr>
+											<tr>
+												<td class="column1">multilayer MoS<SUB>2</SUB> (CVD) illuminated by UV</td>
+												<td class="column2">Chemiresistor</td>
+												<td class="column3">NO<SUB>2</SUB></td>
+												<td class="column4">5 ppm</td>
+												<td class="column5">18% at 5 ppm</td>
+												<td class="column6">NH<SUB>3</SUB>, H<SUB>2</SUB>, H<SUB>2</SUB>S, CO<SUB>2</SUB>, and CH<SUB>4</SUB></td>
+												<td class="column7">29 s</td>
+												<td class="column8"><a href="../sources/8.pdf">8</a></td>
+											</tr>
 										</tbody>
 									</table>
 								</div>
@@ -361,6 +371,8 @@
 							Sensors (Basel, Switzerland) vol. 19,9 2123. 2019, doi:10.3390/s19092123</a>.</li>
 							<li>(7) <a href="../sources/7.pdf">Xu et al, High-response NO<SUB>2</SUB> resistive gas sensor based on bilayer MoS<SUB>2</SUB> grown by a new two-step chemical vapor 
 							deposition method. J. Alloy. Compd. 2017, 725, 253–259.</a>.</li>
+							<li>(8) <a href="../sources/8.pdf">Kumar et al, UV-Activated MoS2 Based Fast and Reversible NO2 Sensor at Room Temperature. ACS Sens. 
+							2017, 2, 1744–1752.</a>.</li>
 						</ul>
 					</div>
 				</div>
